[project]
name = "homwing-gripper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "emgardner", email = "gardner.ethan10@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.3",
    "pymodbus>=3.9.1",
    "pyserial>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
